{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 13,
  "lineage": "4fa9d745-a78f-2c4e-0ea5-c987ac5e048a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:448509641072:loadbalancer/app/vpc-0772177330d0ff684-alb/3c24934a6b5a9371",
            "arn_suffix": "app/vpc-0772177330d0ff684-alb/3c24934a6b5a9371",
            "desync_mitigation_mode": "defensive",
            "dns_name": "vpc-0772177330d0ff684-alb-118396211.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:448509641072:loadbalancer/app/vpc-0772177330d0ff684-alb/3c24934a6b5a9371",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vpc-0772177330d0ff684-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0832451d4ce120db3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-007a5b741418f451e"
              },
              {
                "subnet_id": "subnet-0285de1b3363c5012"
              },
              {
                "subnet_id": "subnet-02afa963f85f9e5a4"
              }
            ],
            "subnets": [
              "subnet-007a5b741418f451e",
              "subnet-0285de1b3363c5012",
              "subnet-02afa963f85f9e5a4"
            ],
            "vpc_id": "vpc-0772177330d0ff684",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:448509641072:listener/app/vpc-0772177330d0ff684-alb/3c24934a6b5a9371/c32788703ce08882",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:448509641072:targetgroup/web-servers-tg/2b1576c3fcfd5149",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:448509641072:listener/app/vpc-0772177330d0ff684-alb/3c24934a6b5a9371/c32788703ce08882",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:448509641072:loadbalancer/app/vpc-0772177330d0ff684-alb/3c24934a6b5a9371",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.web_alb",
            "aws_lb_target_group.web_servers",
            "aws_security_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:448509641072:targetgroup/web-servers-tg/2b1576c3fcfd5149",
            "arn_suffix": "targetgroup/web-servers-tg/2b1576c3fcfd5149",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:448509641072:targetgroup/web-servers-tg/2b1576c3fcfd5149",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web-servers-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0772177330d0ff684"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:448509641072:security-group/sg-0832451d4ce120db3",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0832451d4ce120db3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform_example_sg",
            "name_prefix": "",
            "owner_id": "448509641072",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0772177330d0ff684"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}